--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -9,3 +9,25 @@ body {
     padding: var(--large);
   }
 }
+
+.page {
+  position: absolute;
+}
+
+.page-enter {
+  opacity: 0.01;
+
+  &.page-enter-active {
+    opacity: 1;
+    transition: opacity 250ms 250ms ease-in;
+  }
+}
+
+.page-leave {
+  opacity: 1;
+
+  &.page-leave-active {
+    opacity: 0.01;
+    transition: opacity 250ms ease-in;
+  }
+}
