--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -14,6 +14,19 @@ body {
 
 .screen {
   position: absolute;
+  top: 0; left: 0;
+
+  width: 100%;
+  height: 100%;
+}
+
+.login {
+  position: absolute;
+  top: 50%; left: 50%;
+
+  padding: 16px;
+
+  transform: translate(-50%,-50%);
 }
 
 .screen-enter {
