--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -4,12 +4,30 @@
 }
 
 body {
+  margin: 0;
   font-family: 'Roboto', sans-serif;
+  font-size: 16px;
 
   h1 {
     color: var(--purple);
     padding: var(--large);
   }
+}
+
+.wallpaper {
+  position: absolute;
+  top: 0; left: 0;
+
+  width: 100%;
+  height: 100%;
+}
+
+.footer {
+  position: absolute;
+  bottom: 0; left: 0;
+  width: 100%;
+  color: white;
+  text-align: center;
 }
 
 .screen {
@@ -24,9 +42,16 @@ body {
   position: absolute;
   top: 50%; left: 50%;
 
+  max-width: 280px;
   padding: 16px;
 
   transform: translate(-50%,-50%);
+
+  .logo {
+    display: block;
+    height: 80px;
+    margin: 16px auto;
+  }
 }
 
 .screen-enter {
