refactor code and add pubnub lib

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -90,3 +90,9 @@ pre[class*="language-"] {
     transition: opacity 250ms ease-in;
   }
 }
+
+.hidden {
+  display: none;
+  visibility: hidden;
+  opacity: 0;
+}
