draw learning tree

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -121,3 +121,42 @@ pre[class*="language-"] {
 .text-center {
   text-align: center;
 }
+
+.node {
+  cursor: pointer;
+}
+
+.overlay{
+  background-color:#EEE;
+}
+
+.node circle {
+  fill: #fff;
+  stroke: steelblue;
+  stroke-width: 1.5px;
+}
+
+.node text {
+  font-size:10px; 
+  font-family:sans-serif;
+}
+
+.link {
+  fill: none;
+  stroke: rgb(122, 163, 229);
+  stroke-width: 3.5px;
+}
+
+.templink {
+  fill: none;
+  stroke: red;
+  stroke-width: 3px;
+}
+
+.ghostCircle.show{
+  display:block;
+}
+
+.ghostCircle, .activeDrag .ghostCircle{
+ display: none;
+}
